# sourcemud

./: .gitignore  AUTHORS  COPYING  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  awemud.conf.in  awemud.in  bootstrap  configure.ac  hosts.deny  sourcemud.conf.in  sourcemud.in  startup
data/: admin.acct  admin.ply  animals.npcs  armor.objs  awemud.help  awemud.sql  badnames  calendar  commands.help  example.sql  example.zone  gems.objs  html  messages  misc.objs  olc.help  races  skills  socials  time  time.in  traits  undead.npcs  uniqid  weapons.objs  weather  weather.in
data/blueprints/: animals.npcs  armor.objs  gems.objs  manifest.txt  misc.objs  undead.npcs  weapons.objs
data/help/: awemud.help  commands.help  manifest.txt  olc.help  sourcemud.help
data/html/: account.tpl  error.tpl  footer.tpl  header.tpl  index.tpl  login.tpl  logout.tpl  manifest.txt  stats.html  stats.tpl
data/html/tpl/: header.tpl  index.tpl
data/zones/: catacombs.zone  darkwood.zone  example.zone  example.zone.old  manifest.txt  saladhin.zone  underworld.zone
doc/: awemud-manual.xml  awemud.6.in  ch-accounts.xml  ch-control.xml  ch-installation.xml  ch-introduction.xml  ch-olc.xml  ch-scripting.xml  control.txt  events.txt  index.html  parse.txt  ruleset.txt  script-guide.xml  weather.txt  zmp-x-awemud.txt  zmp-x-sourcemud.txt
doc/design/: store.txt
include/: common.h
include/common/: aweregex.h  base64.h  bitset.h  db.h  error.h  fdprintf.h  file.h  gcbase.h  gclist.h  gcmap.h  gcset.h  gcvector.h  imanager.h  log.h  mail.h  manifest.h  md5.h  rand.h  regex.h  strbuf.h  streams.h  streamtime.h  string.h  time.h  types.h  uniqid.h
include/lua/: core.h  exec.h  object.h  print.h
include/mud/: account.h  action.h  ai.h  bindings.h  body.h  caffect.h  char.h  clock.h  color.h  command.h  container.h  control.h  creation.h  creature.h  efactory.h  elist.h  entity.h  event.h  exit.h  fileobj.h  filetab.h  form.h  gametime.h  help.h  hooks.h  http.h  idmap.h  login.h  macro.h  message.h  name.h  network.h  npc.h  object.h  olc.h  parse.h  pconn.h  pdesc.h  player.h  portal.h  (+15 more)
include/net/: http.h  iplist.h  manager.h  netaddr.h  network.h  socket.h  telnet.h  util.h  zmp.h
include/scriptix/: array.h  atom.h  compiler.h  error.h  function.h  iterator.h  native.h  number.h  opcodes.h  scriptix.h  stream.h  string.h  struct.h  sxstring.h  sysdep.h  system.h  thread.h  type.h  value.h  vimpl.h
lib/lua51/: README
scripts/: animal.ai  awemud.sx  corerules.sx  creation.sx  death.sx  example.zone.sx  http.lua  httplib.lua  init.lua  load  macro.lua  manifest.txt  npc.sx  object.sx  player.sx  sourcemud.sx  start.sx  store.sx  string.sx  webserver.sx  whereis.sx
scripts/ai/: animal.ai  manifest.txt  monster.ai
src/cmd/: abuse.cc  admin.cc  admin_grant.cc  admin_revoke.cc  admin_shutdown.cc  affects.cc  blockip.cc  boot.cc  chat.cc  climb.cc  close.cc  commands.cc  crawl.cc  drink.cc  drop.cc  east.cc  eat.cc  emote.cc  get.cc  give.cc  gm.cc  gm_announce.cc  gm_boot.cc  go.cc  grant.cc  info.cc  inventory.cc  kick.cc  kneel.cc  lay.cc  lock.cc  look.cc  man.cc  move.cc  north.cc  northeast.cc  northwest.cc  object.cc  olc.cc  olc_create.cc  (+35 more)
src/common/: base64.cc  db.cc  error.cc  fdprintf.cc  file.cc  gc.cc  imanager.cc  log.cc  manifest.cc  md5.cc  rand.cc  regex.cc  strbuf.cc  streams.cc  strings.cc  time.cc  uniqid.cc
src/lua/: core.cc  entlib.cc  exec.cc  misclib.cc  mudlib.cc  object.cc  print.cc
src/mud/: account.cc  action.cc  ai.cc  body.cc  caffect.cc  calendar.cc  char.cc  char_create.cc  char_do.cc  cmd_admin.cc  cmd_builder.cc  cmd_char.cc  cmd_creature.cc  cmd_gm.cc  cmd_init.cc  cmd_player.cc  combat.cc  command.cc  control.cc  creation.cc  creature.cc  efactory.cc  entity.cc  error.cc  event.cc  exit.cc  fileobj.cc  filetab.cc  form.cc  help.cc  hooks.cc  http.cc  idmap.cc  imanager.cc  log.cc  login.cc  macro.cc  mail.cc  main.cc  md5.cc  (+26 more)
src/net/: http.cc  iplist.cc  manager.cc  netaddr.cc  network.cc  socket.cc  telnet.cc  util.cc  zmp.cc
src/scriptix/: array.cc  atom.cc  compiler.cc  error.cc  eval.cc  function.cc  global.cc  grammar.yy  init_types.cc  iter.cc  lexer.ll  number.cc  optimize.cc  parser.cc  stream.cc  string.cc  struct.cc  system.cc  type.cc  value.cc
src/util/: awemud-ctrl.c
src/xml/: bindings.xml  event-list.xml  events.xml  hook-list.xml  hooks.xml  macros.xml  parse-intr.xml  script-intr.xml  skills.xml
tools/: awemud-control.inc.php  commit.sh  events-code.xsl  events-doc.xsl  events-header.xsl  hooks-code.xsl  hooks-doc.xsl  hooks-header.xsl  macros-code.xsl  massroom.pl  new-version.sh  note.sh  parse-code.xsl  parse-commands.pl  parse-commands.sh  parse-report.pl  replace.sh.in  script-code.xsl  script-doc.xsl  script-header.xsl  skills-code.xsl  skills-header.xsl  skills-help.xsl  undo
